--- a/vars.env
+++ b/vars.env
@@ -1,8 +1,8 @@
 # Required: URL of the webpage or API endpoint to scrape
-SITE_URL=https://api.openweathermap.org/data/3.0/onecall?lat=33.44&lon=-94.04&exclude=hourly,daily&appid=95fd69870f1fb88246f33cfe27422468
+SITE_URL=https://api.openweathermap.org/data/3.0/onecall?lat=47.607036&lon=-122.330711&exclude=current,minutely,daily,alerts&appid=f8be82cf678f3995da1461f1955aec39
 
 # Optional: PostgreSQL connection string
-DATABASE_URL=postgres://postgres:cVCvnIYwbwOOtZdHivdGPDDsNUkYUoNo@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:cVCvnIYwbwOOtZdHivdGPDDsNUkYUoNo@postgres.railway.internal:5432/railway
 
 # Optional: Table name in the database to store the data
 # The table must exist and have a raw_json column
